--- a/Ejercicio02/Ejercicio02.Android/Properties/AndroidManifest.xml
+++ b/Ejercicio02/Ejercicio02.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Ejercicio02">
-	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Ejercicio02" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="27" android:targetSdkVersion="29" />
 	<application android:label="Ejercicio02.Android"></application>
 </manifest>
